Apply gray background to video section and add padding and margin for spacing issues.

--- a/styles.css
+++ b/styles.css
@@ -78,4 +78,27 @@ button {
 
 .video-description {
   margin-top: 10px;
+  font-weight: 300;
+  color: #6e6e6e;
+}
+
+.video-controls {
+  margin-top: 20px;
+}
+
+.video-button {
+  border: 1px solid #5bb471;
+  background: none;
+  padding: 10px 20px;
+}
+
+.video-button-primary {
+  margin-right: 10px;
+}
+
+.video-container {
+  margin-top: 20px;
+  background-color: #ccc;
+  width: 100%;
+  height: 500px;
 }
